--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,9 +1,9 @@
 
 <div style="width: 1024px;height: 512px; MARGIN-RIGHT: auto; MARGIN-LEFT: auto;border: 2px solid #0000FF;">
-    <div style="width: 1024px;height: 512px;position:absolute;background-image:url('images/1.jpg');" id="l2" >
-
+    <div style="width: 1024px;height: 512px;position:absolute;background-image:url('imagesno/1.jpg');" id="l2" >
+        <div style="width: 920px;height: 420px;position:absolute;left: 25px;" id="l3" >
         <!--background-image:url('images/1.jpg');-->
-
+        <div style="position:absolute; width: 20px;height: 20px; background-image:url('images/中220.jpg'); "> </div>
 
     </div>
     <div style="position:relative; left:12px;top: 6px;width: 64px;height: 64px; background-image: url('images/4.jpg') ;display: block; background-position:0px 0px; background-repeat:no-repeat; " id="l1">
