添加设置按键

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,13 +1,27 @@
 
 <div style="width: 1024px;height: 512px; MARGIN-RIGHT: auto; MARGIN-LEFT: auto;border: 2px solid #0000FF;">
     <div style="width: 1024px;height: 512px;position:absolute;" id="l2" >
-        <div style="width: 1024px;height: 512px;position:absolute;" id="l3" >
+        <div style="width: 1024px;height: 512px;position:absolute;" id="l3" ></div>
         <!--background-image:url('images/1.jpg');-->
         <!--<div style="position:absolute; width: 20px;height: 20px; background-image:url('images/中220.jpg'); "> </div>-->
 
     </div>
-    <div style="position:relative;width: 64px;height: 64px; background-image: url('images/4.jpg') ;display: block; background-position:0px 0px; background-repeat:no-repeat; " id="l1">
 
+    <div style="position:relative;width: 64px;height: 64px; background-image: url('images/4.jpg') ;display: block; background-position:0px 0px; background-repeat:no-repeat; " onclick="showbut()" id="l1">
+
+
+
+</div>
+
+    <div style="position:relative;width: 256px;height: 512px; display: none; left:768px;top:-64px;  background-color: aliceblue"  id="l4">
+<label>设置键盘按钮</label>
+        <div style="left: 30px">    向左 ： <input  style="width: 100px"  onfocus='focus1(this.id)' onblur="blur1()" id="b0" value="方向左" readonly="readonly" ></div>
+        <div style="left: 30px">    向上 ： <input  style="width: 100px"  onfocus='focus1(this.id)' onblur="blur1()" id="b1" value="方向上" readonly="readonly"></div>
+        <div style="left: 30px">    向右 ： <input  style="width: 100px" onfocus='focus1(this.id)' onblur="blur1()" id="b2"  value="方向右"readonly="readonly"></div>
+        <div style="left: 30px">    向下 ： <input  style="width: 100px" onfocus='focus1(this.id)' onblur="blur1()" id="b3"  value="方向下" readonly="readonly"></div>
+        <div style="left: 30px">    确定 ： <input  style="width: 100px" onfocus='focus1(this.id)' onblur="blur1()" id="b4"  value="a"readonly="readonly"></div>
+        <div style="left: 30px">    取消 ： <input  style="width: 100px" onfocus='focus1(this.id)' onblur="blur1()" id="b5"  value="s"readonly="readonly" ></div>
+        <div style="left: 30px">    <input type="button" value="保存" style="width: 60px" onclick="closebut()"></div>
 
 
     </div>
