添加对话框

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -12,6 +12,11 @@
 
 
 </div>
+    <div style="position:relative;width: 128px;height: 72px; display: none;border: 2px solid #739dba; left: 20px;background-color: whitesmoke;" id="l5">
+
+
+
+    </div>
 
     <div style="position:relative;width: 256px;height: 512px; display: none; left:768px;top:-64px;  background-color: aliceblue"  id="l4">
 <label>设置键盘按钮</label>
